tests/baselines/reference/generatorTypeCheck7.errors.txt
generatorTypeCheck7.ts(4,17): error TS2741: Property 'hello' is missing in type 'Generator<number, any, any>' but required in type 'WeirdIter'.


==== generatorTypeCheck7.ts (1 errors) ====
    interface WeirdIter extends IterableIterator<number> {
        hello: string;
    }
    function* g1(): WeirdIter { }
                    ~~~~~~~~~
!!! error TS2741: Property 'hello' is missing in type 'Generator<number, any, any>' but required in type 'WeirdIter'.
!!! related TS2728 generatorTypeCheck7.ts:2:5: 'hello' is declared here.